--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>(5) Clone Facebook</title>
+    <title>Clone Facebook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
